feat: add example

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.poll-interval=1000
+spring.devtools.restart.quiet-period=400
