--- a/server/dockerfile
+++ b/server/dockerfile
@@ -17,6 +17,7 @@ FROM openjdk:17-jdk-slim as production
 WORKDIR /app
 
 COPY --from=build /app/target/*.jar app.jar
+RUN chmod 755 /app/app.jar
 
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
