chore: update docker-compose.yml and server files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 services:
   postgresql:
     image: postgres:latest
@@ -38,12 +38,15 @@ services:
       context: ./server
       dockerfile: Dockerfile
     container_name: backend
+    image: demo-backend
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgresql:5432/${DB_DATABASE}
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgresql:${DB_PORT}/${DB_DATABASE}
       SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - ./server/src:/app/src
     restart: unless-stopped
 
   pgadmin:
