--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17-slim as build
+FROM openjdk:17-slim AS build
 
 WORKDIR /app
 
@@ -12,7 +12,7 @@ COPY src ./src
 
 RUN ./mvnw clean package -DskipTests
 
-FROM openjdk:17-jdk-slim as production
+FROM openjdk:17-jdk-slim AS production
 
 WORKDIR /app
 
