refactor: refactor exampe code

--- a/server/dockerfile
+++ b/server/dockerfile
@@ -12,7 +12,7 @@ COPY src ./src
 
 RUN ./mvnw clean package -DskipTests
 
-FROM openjdk:17-slim AS production
+FROM openjdk:17-jdk-slim AS production
 
 WORKDIR /app
 
