--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,12 +4,14 @@ spring.application.name=server
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://postgresql:5432/demo}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
