feat: add authentication

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ MONGO_PASSWORD=admin
 PGADMIN_DEFAULT_EMAIL=admin@demo.com
 PGADMIN_DEFAULT_PASSWORD=admin
 PGADMIN_PORT=5050
+
+JWT_SECRET=
+JWT_EXPIRATION=1800
