--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.poll-interval=1000
 spring.devtools.restart.quiet-period=400
+
+# Security
+security.jwt.secret=${JWT_SECRET}
+security.jwt.expiration=${JWT_EXPIRATION:1800}
+security.refresh.length=${REFRESH_LENGTH:64}
+security.refresh.expiration=${REFRESH_EXPIRATION:604800}
