feat: add authentication and redis cache

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
 DB_DATABASE=demo
 DB_USERNAME=admin
 DB_PASSWORD=admin
-DB_HOST=127.0.0.1
+DB_HOST=postgresql
 DB_PORT=5432
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=admin
 REDIS_PORT=6379
+REDIS_EXPIRATION=604800
 
 MONGO_HOST=mongodb
 MONGO_DB=demo
