--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -23,3 +23,9 @@ security.jwt.secret=${JWT_SECRET}
 security.jwt.expiration=${JWT_EXPIRATION:1800}
 security.refresh.length=${REFRESH_LENGTH:64}
 security.refresh.expiration=${REFRESH_EXPIRATION:604800}
+
+# Redis
+spring.data.redis.host=${REDIS_HOST:redis}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:admin}
+redis.expiration=${REDIS_EXPIRATION:86400}
