chore: add swagger ui for docs

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -29,3 +29,10 @@ spring.data.redis.host=${REDIS_HOST:redis}
 spring.data.redis.port=${REDIS_PORT:6379}
 spring.data.redis.password=${REDIS_PASSWORD:admin}
 redis.expiration=${REDIS_EXPIRATION:86400}
+
+# Swagger
+swagger.enabled=true
+swagger.title=Demo CMS API
+swagger.description=Demo CMS API
+swagger.version=1.0
+swagger.dev.url=127.0.0.1:8080
